package com.example.airpnp.Resources;

public class SizeItem {
    private int imageDrawable;

    public SizeItem(int imageDrawable){
        this.imageDrawable = imageDrawable;
    }

    public int getImageDrawable() {
        return imageDrawable;
    }

    public void setImageDrawable(int imageDrawable) {
        this.imageDrawable = imageDrawable;
    }
}
