@startuml

title __RESOURCES's Class Diagram__\n

  namespace com.example.airpnp {
    namespace Resources {
      class com.example.airpnp.Resources.CardItem {
          - aboardChecked : boolean
          - aboardOnClick : OnClickListener
          - imageUrl : String
          + CardItem()
          + getAboardOnClick()
          + getImageUrl()
          + getOrder()
          + isAboardChecked()
          + setAboardChecked()
          + setAboardOnClick()
          + setImageUrl()
          + setOrder()
      }
    }
  }
  

  namespace com.example.airpnp {
    namespace Resources {
      class com.example.airpnp.Resources.CardRecyclerViewAdapter {
          + firstCheck : boolean
          + lastCardView : MaterialCardView
          - mExampleList : ArrayList<PaymentDetails>
          + CardRecyclerViewAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          + setClickListener()
      }
    }
  }
  

  namespace com.example.airpnp {
    namespace Resources {
      class com.example.airpnp.Resources.CardRecyclerViewAdapter.ExampleViewHolder {
          ~ cardView : MaterialCardView
          ~ colorCheckedState : int
          ~ colorRegularState : int
          ~ drawableCheckedState : int
          ~ drawableRegularState : int
          ~ lastItemClicked : View
          ~ tv_subText : TextView
          ~ tv_titleName : TextView
          + ExampleViewHolder()
          + onClick()
          - cancelLastCheck()
          - cardStateTheme()
      }
    }
  }
  

  namespace com.example.airpnp {
    namespace Resources {
      interface com.example.airpnp.Resources.CardRecyclerViewAdapter.ItemClickListener {
          {abstract} + onItemClick()
      }
    }
  }
  

  namespace com.example.airpnp {
    namespace Resources {
      class com.example.airpnp.Resources.CustomAdapterCarList {
          ~ carItems : ArrayList<UserCar>
          ~ context : Context
          + CustomAdapterCarList()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.example.airpnp {
    namespace Resources {
      class com.example.airpnp.Resources.CustomAdapterCardList {
          - btnCancelOnClickListener : OnClickListener
          - mContext : Context
          - orders : List<Order>
          + CustomAdapterCardList()
          + getView()
          + setOnClickListener()
      }
    }
  }
  

  namespace com.example.airpnp {
    namespace Resources {
      class com.example.airpnp.Resources.CustomAdapterSizeMenu {
          - mContext : Context
          - sizeIcon : List<SizeItem>
          + CustomAdapterSizeMenu()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.example.airpnp {
    namespace Resources {
      class com.example.airpnp.Resources.PaymentDetails {
          - subText : String
          - titleName : String
          + PaymentDetails()
          + getSubText()
          + getTitleName()
          + setSubText()
          + setTitleName()
      }
    }
  }
  

  namespace com.example.airpnp {
    namespace Resources {
      class com.example.airpnp.Resources.PlaceAutocompleteAdapter {
          {static} - STYLE_BOLD : CharacterStyle
          {static} - TAG : String
          - mBounds : LatLngBounds
          - mGoogleApiClient : GoogleApiClient
          - mPlaceFilter : AutocompleteFilter
          - mResultList : ArrayList<AutocompletePrediction>
          + PlaceAutocompleteAdapter()
          + getCount()
          + getFilter()
          + getItem()
          + getView()
          + setBounds()
          - getAutocomplete()
      }
    }
  }
  

  namespace com.example.airpnp {
    namespace Resources {
      class com.example.airpnp.Resources.SizeItem {
          - imageDrawable : int
          + SizeItem()
          + getImageDrawable()
          + setImageDrawable()
      }
    }
  }
  

  com.example.airpnp.Resources.CardItem o-- com.example.airpnp.UserPackage.Order : order
  com.example.airpnp.Resources.CardRecyclerViewAdapter o-- com.example.airpnp.Resources.CardRecyclerViewAdapter.ItemClickListener : itemClickListener
  com.example.airpnp.Resources.CardRecyclerViewAdapter +-down- com.example.airpnp.Resources.CardRecyclerViewAdapter.ExampleViewHolder
  com.example.airpnp.Resources.CardRecyclerViewAdapter +-down- com.example.airpnp.Resources.CardRecyclerViewAdapter.ItemClickListener
  com.example.airpnp.Resources.CardRecyclerViewAdapter.ExampleViewHolder .up.|> View.OnClickListener
  com.example.airpnp.Resources.PlaceAutocompleteAdapter .up.|> Filterable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
